[gd_scene load_steps=2 format=3 uid="uid://ctigchv1t244u"]

[ext_resource type="Script" path="res://scripts/Prestige.gd" id="1_vxv3y"]

[node name="Prestige" type="Node"]

[node name="Prestige" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxv3y")

[node name="Background" type="ColorRect" parent="Prestige"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="MainPanel" type="Panel" parent="Prestige"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Prestige/MainPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ANCIENT BLOODLINES (PRESTIGE)"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="Prestige/MainPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 220.0

[node name="PrestigeLabel" type="RichTextLabel" parent="Prestige/MainPanel/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Available Points: 0
Prestige Level: 0"

[node name="PrestigeProgress" type="ProgressBar" parent="Prestige/MainPanel/StatsPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
step = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Prestige/MainPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -180.0
offset_right = 550.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeGrid" type="GridContainer" parent="Prestige/MainPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="PrestigeButton" type="Button" parent="Prestige/MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -150.0
offset_right = 280.0
offset_bottom = -90.0
grow_vertical = 0
text = "PRESTIGE RESET"

[node name="BackButton" type="Button" parent="Prestige/MainPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -70.0
offset_right = 280.0
offset_bottom = -30.0
grow_vertical = 0
text = "BACK TO MAIN"
